src/test/test-models/good/parser-generator/test_transform_inits.stan
parameters {
  real<lower=0> nu;
  real<lower=0, upper=(nu == 0 ? 1 : positive_infinity())> lambda;
}

