src/test/test-models/bad/validate_set_double_offset_multiplier_bad3.stan
parameters {
  real<lower=1,multiplier=-31> a;
  real y;
}

model {
  y ~ normal(0,1);
}
